--- a/projects/state-manager/package.json
+++ b/projects/state-manager/package.json
@@ -25,10 +25,10 @@
     "manager"
   ],
   "peerDependencies": {
+    "@alkemist/compare-engine": "^1.3.3",
+    "@alkemist/smart-tools": "^1.1.12",
     "@angular/common": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@alkemist/compare-engine": "^1.3.1",
-    "@alkemist/smart-tools": "^1.0.3"
+    "@angular/core": "^16.2.0"
   },
   "sideEffects": false
 }
