--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
-    "build-state-manager": "npm run build --workspace @alkemist/ngx-state-manager"
+    "build-state-manager": "yarn workspace @alkemist/ngx-state-manager build"
   },
   "private": true,
   "dependencies": {
     "@alkemist/smart-tools": "^1.1.12",
+    "@alkemist/compare-engine": "^1.3.3",
     "@angular/animations": "^16.2.0",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
