--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "paths": {
       "@alkemist/ngx-state-manager": [
         "projects/state-manager/dist"
+      ],
+      "my-lib": [
+        "projects/my-lib/dist"
       ]
     },
     "module": "ES2022",
